coco-rs/vercel-ai/xai/tests/snapshots/xai_responses_cassette_replay__responses_web_search_stream_shape.snap
---
source: vercel-ai/xai/tests/xai_responses_cassette_replay.rs
assertion_line: 191
expression: rle_shape(&parts)
---
streamStart
response-metadata
toolInputStart
toolInputDelta
toolInputEnd
tool-call
tool-result
textStart
textDelta x259
source x10
textEnd
finish
